--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,14 +21,14 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/blog">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/help">Help</a>
+            <a href="https://scotentsd.github.io/Blog">Blog</a>
+            <a href="https://scotentsd.github.io/About">About</a>
+            <a href="https://scotentsd.github.io/help">Help</a>
           </nav>
         </header>
       </div>
     </div>
-    
+
     <div class="container-lg px-3 my-5 markdown-body">
 
 
