--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,8 @@
           </div>
 
           <nav>
-            <a href="https://scotentsd.github.io/Blog">Blog</a>
-            <a href="https://scotentsd.github.io/About">About</a>
+            <a href="https://scotentsd.github.io/blog">Blog</a>
+            <a href="https://scotentsd.github.io/about">About</a>
             <a href="https://scotentsd.github.io/help">Help</a>
           </nav>
         </header>
