--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <div class="wrapper-masthead">
+    <div class="wrapper-masthead" style="background-color: blue;">
       <div class="container">
         <header class="masthead clearfix">
           <a href="https://scotentsd.github.io/" class="site-avatar"><img src="images/SaltireCross.png" /></a>
