--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,14 +12,16 @@
 
     <div class="wrapper-masthead" style="background-color: blue;">
       <div class="container">
-        <header class="masthead clearfix">
-          <a href="https://scotentsd.github.io/" class="site-avatar"><img src="images/SaltireCross.png" /></a>
+
+        <header>
+          <a href="https://scotentsd.github.io/" class="site-avatar" alt="Service Design Saltire Logo"><img src="images/SaltireCross.png" style:"float:left;" /></a>
           <nav>
             <a href="https://scotentsd.github.io/blog">Blog</a>
             <a href="https://scotentsd.github.io/about">About</a>
             <a href="https://scotentsd.github.io/help">Help</a>
           </nav>
         </header>
+
       </div>
     </div>
 
