--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 
         <header>
           <a href="https://scotentsd.github.io/" class="site-avatar" alt="Service Design Saltire Logo"><img src="images/SaltireCross.png" style:"float:left;" /></a>
+            <span style:"color:white;">A Scottish Enterprise Service Design site<span> 
             <a href="https://scotentsd.github.io/blog">Blog | </a>
             <a href="https://scotentsd.github.io/about">About | </a>
             <a href="https://scotentsd.github.io/help">Help</a>
