--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,20 @@
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+
+<style>
+img 			{	
+					padding-top: 10;
+     				float:left;
+    			}	
+.banner_head   	{	
+					color: white;
+	  				font-size: 2em;
+	  			}
+
+</style>
+
+
   </head>
   <body>
 
@@ -15,7 +29,8 @@
 
         <header>
           <a href="https://scotentsd.github.io/" class="site-avatar" alt="Service Design Saltire Logo"><img src="images/SaltireCross.png" style:"float:left;" /></a>
-            <span style:"color:white;">A Scottish Enterprise Service Design site<span>
+
+            <span class="banner_head">A Scottish Enterprise Service Design site<span>
             <a href="https://scotentsd.github.io/blog">Blog | </a>
             <a href="https://scotentsd.github.io/about">About | </a>
             <a href="https://scotentsd.github.io/help">Help</a>
