--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,13 +10,21 @@
 
 <style>
 img 			{	
-					padding-top: 10;
+					padding-top: 20;
+					padding-right: 50;
      				float:left;
     			}	
 .banner_head   	{	
 					color: white;
 	  				font-size: 2em;
+	  				padding-right: 50;
 	  			}
+
+.banner_nav   	{	
+					color: white;
+	  				font-size: 2em;
+	  			}
+
 </style>
 
 
