--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,9 @@ img 			{
           <a href="https://scotentsd.github.io/" class="site-avatar" alt="Service Design Saltire Logo"><img src="images/SaltireCross.png" style:"float:left;" /></a>
 
             <span class="banner_head">A Scottish Enterprise Service Design site<span>
-            <a href="https://scotentsd.github.io/blog">Blog | </a>
-            <a href="https://scotentsd.github.io/about">About | </a>
-            <a href="https://scotentsd.github.io/help">Help</a>
+            <a href="https://scotentsd.github.io/blog"   class="banner_nav">Blog | </a>
+            <a href="https://scotentsd.github.io/about"  class="banner_nav">About | </a>
+            <a href="https://scotentsd.github.io/help"   class="banner_nav">Help</a>
         </header>
 
       </div>
