--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,24 +8,24 @@
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
 
-<style>
-img 			{	
+	<style>
+	.banner_img 			{	
 					padding-top: 20;
 					padding-right: 50;
      				float:left;
     			}	
-.banner_head   	{	
+	.banner_head   	{	
 					color: white;
 	  				font-size: 2em;
 	  				padding-right: 50;
 	  			}
 
-.banner_nav   	{	
+	.banner_nav   	{	
 					color: white;
 	  				font-size: 2em; 
 	  			}
 
-</style>
+	</style>
 
 
   </head>
@@ -35,7 +35,7 @@ img 			{
       <div class="container">
 
         <header>
-          <a href="https://scotentsd.github.io/" class="site-avatar" alt="Service Design Saltire Logo"><img src="images/SaltireCross.png" style:"float:left;" /></a>
+          <a href="https://scotentsd.github.io/" class="site-avatar" alt="Service Design Saltire Logo"><img src="images/SaltireCross.png" class="banner_img" /></a>
 
             <span class="banner_head">A Scottish Enterprise Service Design site<span>
             <a href="https://scotentsd.github.io/blog"   class="banner_nav">Blog | </a>
