--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,13 +16,13 @@
     			}	
 	.banner_head   	{	
 					color: white;
-	  				font-size: 2em;
+	  				font-size: 16px;
 	  				padding-right: 50;
 	  			}
 
 	.banner_nav   	{	
-					color: white;
-	  				font-size: 2em; 
+					color: azure;
+	  				font-size: 16px; 
 	  			}
 
 	</style>
@@ -35,10 +35,10 @@
       <div class="container">
 
         <header>
-          <a href="https://scotentsd.github.io/" class="site-avatar" alt="Service Design Saltire Logo"><img src="images/SaltireCross.png" class="banner_img" /></a>
+          <a href="https://scotentsd.github.io/" class="site-avatar" alt="Service Design Saltire Logo" class="banner_img"><img src="images/SaltireCross.png"  /></a>
 
             <span class="banner_head">A Scottish Enterprise Service Design site<span>
-            	
+
             <a href="https://scotentsd.github.io/blog"   class="banner_nav">Blog | </a>
             <a href="https://scotentsd.github.io/about"  class="banner_nav">About | </a>
             <a href="https://scotentsd.github.io/help"   class="banner_nav">Help</a>
