--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,18 +10,20 @@
 
 	<style>
 	.banner_img 			{	
-					padding-top: 20;
-					padding-right: 50;
+					padding-top: 20px;
+					padding-right: 50px;
      				float:left;
     			}	
 	.banner_head   	{	
 					color: white;
 	  				font-size: 16px;
-	  				padding-right: 50;
+	  				margin-left: 50px
+	  				margin-right: 50px;
+
 	  			}
 
 	.banner_nav   	{	
-					color: azure;
+					color: honeydew;
 	  				font-size: 16px; 
 	  			}
 
