--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
       <div class="container">
 
         <header>
-          <a href="https://scotentsd.github.io/" class="site-avatar" alt="Service Design Saltire Logo" class="banner_img"><img src="images/SaltireCross.png"  /></a>
+          <a href="https://scotentsd.github.io/" ><img src="images/SaltireCross.png" alt="Service Design Saltire Logo" class="banner_img" /></a>
 
             <span class="banner_head">A Scottish Enterprise Service Design site<span>
 
