--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,15 +10,16 @@
 
 	<style>
 	.banner_img 			{	
-					padding-top: 20px;
+					padding-top: 10px;
+					padding-bottom: 10px;
 					padding-right: 50px;
      				float:left;
     			}	
 	.banner_head   	{	
 					color: white;
 	  				font-size: 16px;
-	  				margin-left: 50px
-	  				margin-right: 50px;
+	  				padding-left: 50px;
+	  				padding-right: 50px;
 
 	  			}
 
