--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,25 +9,25 @@
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
 
 	<style>
-	.banner_img 			{	
+	.banner_img {	
 					padding-top: 10px;
 					padding-bottom: 10px;
-					padding-right: 50px;
+					padding-right: 20px;
      				float:left;
-    			}	
+    			}
+
 	.banner_head   	{	
 					color: white;
 	  				font-size: 16px;
 	  				padding-left: 50px;
 	  				padding-right: 50px;
+	  				}
 
-	  			}
-	  			
 
 	.banner_nav   	{	
 					color: honeydew;
 	  				font-size: 16px; 
-	  			}
+	  				}
 	</style>
   </head>
   <body>
@@ -36,13 +36,15 @@
       <div class="container">
 
         <header>
-          <a href="https://scotentsd.github.io/" ><img src="images/SaltireCross.png" alt="Service Design Saltire Logo" class="banner_img" /></a>
+          <a href="https://scotentsd.github.io/" ><img src="images/SaltireCross.png" alt="Service Design Saltire Logo" class="anner_img" /></a>
 
-            <span class="banner_head">A Scottish Enterprise Service Design site<span>
+            <span class="banner_head">A Scottish Enterprise Service Design site</span>
 
-            <a href="https://scotentsd.github.io/blog"   class="banner_nav">Blog | </a>
-            <a href="https://scotentsd.github.io/about"  class="banner_nav">About | </a>
+            <span class="banner_head">
+            <a href="https://scotentsd.github.io/blog"   class="banner_nav">Blog  |  </a>
+            <a href="https://scotentsd.github.io/about"  class="banner_nav">About  |  </a>
             <a href="https://scotentsd.github.io/help"   class="banner_nav">Help</a>
+        </span>
         </header>
 
       </div>
