--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,11 +40,11 @@
 
             <span class="banner_head">A Scottish Enterprise Service Design site</span>
 
-            <span class="banner_head">
+            <!--<span class="banner_head"> -->
             <a href="https://scotentsd.github.io/blog"   class="banner_nav">Blog  |  </a>
             <a href="https://scotentsd.github.io/about"  class="banner_nav">About  |  </a>
             <a href="https://scotentsd.github.io/help"   class="banner_nav">Help</a>
-        </span>
+        	<!-- </span> -->
         </header>
 
       </div>
