--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
 
 	<style>
 	.banner_img {	
-					padding-top: 10px;
-					padding-bottom: 10px;
+					padding-top: 8px;
+					padding-bottom: 8px;
 					padding-right: 20px;
      				float:left;
     			}
@@ -19,13 +19,13 @@
 	.banner_head   	{	
 					color: white;
 	  				font-size: 16px;
-	  				padding-left: 50px;
+	  				padding-left: 30px;
 	  				padding-right: 50px;
 	  				}
 
 
 	.banner_nav   	{	
-					color: honeydew;
+					color: lightgray;
 	  				font-size: 16px; 
 	  				}
 	</style>
@@ -36,7 +36,9 @@
       <div class="container">
 
         <header>
-          <a href="https://scotentsd.github.io/" ><img src="images/SaltireCross.png" alt="Service Design Saltire Logo" class="anner_img" /></a>
+          <a href="https://scotentsd.github.io/" >
+          		<img src="images/SaltireCross.png" alt="Service Design Saltire Logo" class="banner_img" />
+          </a>
 
             <span class="banner_head">A Scottish Enterprise Service Design site</span>
 
