--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,17 +21,19 @@
 	  				font-size: 16px;
 	  				padding-left: 30px;
 	  				padding-right: 50px;
+	  				padding-top: 4px;
 	  				}
 
 
 	.banner_nav   	{	
 					color: lightgray;
 	  				font-size: 16px; 
+	  				padding-top: 4px;
 	  				}
 	</style>
   </head>
   <body>
-  	
+
 
     <div class="wrapper-masthead" style="background-color: blue;">
       <div class="container">
@@ -44,9 +46,9 @@
             <span class="banner_head">A Scottish Enterprise Service Design site</span>
 
             <!--<span class="banner_head"> -->
-            <a href="https://scotentsd.github.io/blog"   class="banner_nav">Blog  |  </a>
-            <a href="https://scotentsd.github.io/about"  class="banner_nav">About  |  </a>
-            <a href="https://scotentsd.github.io/help"   class="banner_nav">Help</a>
+            <a href="https://scotentsd.github.io/blog"   class="banner_nav">Blog |</a>
+            <a href="https://scotentsd.github.io/about"  class="banner_nav"> About  |</a>
+            <a href="https://scotentsd.github.io/help"   class="banner_nav"> Help</a>
         	<!-- </span> -->
         </header>
 
