--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,14 +23,14 @@
 	  				font-size: 16px;
 	  				padding-left: 30px;
 	  				padding-right: 50px;
-	  				padding-top: 8px;
+	  				margin-top: 8px;
 	  				}
 
 
 	.banner_nav   	{	
 					color: lightgray;
 	  				font-size: 16px; 
-	  				padding-top: 8px;
+	  				margin-top: 8px;
 	  				}
 	</style>
 
