--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 	  				font-size: 16px;
 	  				padding-left: 30px;
 	  				padding-right: 50px;
-	  				margin-top: 8px;
+	  				margin: 8px;
 	  				}
 
 
