--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
 
 
   <body>
+    <!-- Version 2 -->
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
