--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
   <head>
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
+    {% include meta.html %}
+
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -13,7 +15,6 @@
   </head>
 
   <body>
-    <!-- Version 2 -->
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
@@ -45,5 +46,7 @@
         </footer>
       </div>
     </div>
+
+    {% include analytics.html %}
   </body>
 </html>
