--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <link rel="stylesheet" type="text/css" href="{{ site.url }}/style.css" />
+    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.url }}/feed.xml" />
 
   </head>
 
@@ -18,7 +18,7 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="/images/saltire.png" style="margin-top:10px;" /></a>
+          <a href="{{ site.url }}/" class="site-avatar"><img src="/images/saltire.png" style="margin-top:10px;" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
@@ -33,7 +33,6 @@
         </header>
       </div>
     </div>
-
   
     <div id="main" role="main" class="container">
       {{ content }}
