--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
           <a href="{{ site.url }}/" class="site-avatar"><img src="/images/saltire.png" style="margin-top:10px;" /></a>
 
           <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+            <h1 class="site-name"><a href="{{ site.baseurl }}/">SEP</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
 
@@ -34,7 +34,7 @@
         </header>
       </div>
     </div>
-  
+
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
