--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/blog">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/help">Help</a>
+            <a href="{{ site.url }}/blog">Blog</a>
+            <a href="{{ site.url }}/about">About</a>
+            <a href="{{ site.url }}/help">Help</a>
           </nav>
         </header>
       </div>
