--- a/pages/css/SEPtimeline.css
+++ b/pages/css/SEPtimeline.css
@@ -199,3 +199,11 @@ margin-left: 0.5em;
     color: red;
     font-weight: bold;
 }
+
+H3 {
+    color: black;
+    font-weight: 900;
+    font-size: 1.1em;
+    padding-bottom: 0.2em;
+
+}
