SK - colour for step5 was the same as step1, now brown

--- a/pages/css/SEPtimeline.css
+++ b/pages/css/SEPtimeline.css
@@ -185,10 +185,10 @@ strong {
   border-color: #4d92eb;
 }
 #timeline .demo-card--step5 {
-  background-color: #46b8e9;
+  background-color: #935300;
 }
 #timeline .demo-card--step5 .head::after {
-  border-color: #46b8e9;
+  border-color: #935300;
 }
 
 .in_card {
