--- a/pages/css/SEPtimeline.css
+++ b/pages/css/SEPtimeline.css
@@ -160,31 +160,31 @@ strong {
   display: block;
   width: 100%;
 }
-#timeline .demo-card--step1 {
-  background-color: #46b8e9;
+#timeline .demo-card--step1 { // yellow - accessibility research
+  background-color: #f5c44b;
 }
 #timeline .demo-card--step1 .head::after {
-  border-color: #46b8e9;
+  border-color: #f5c44b;
 }
-#timeline .demo-card--step2 {
+#timeline .demo-card--step2 { // greenish blue - events
   background-color: #3ee9d1;
 }
 #timeline .demo-card--step2 .head::after {
   border-color: #3ee9d1;
 }
-#timeline .demo-card--step3 {
+#timeline .demo-card--step3 { // purple lab research
   background-color: #ce43eb;
 }
 #timeline .demo-card--step3 .head::after {
   border-color: #ce43eb;
 }
-#timeline .demo-card--step4 {
+#timeline .demo-card--step4 { // blue online research
   background-color: #4d92eb;
 }
 #timeline .demo-card--step4 .head::after {
   border-color: #4d92eb;
 }
-#timeline .demo-card--step5 {
+#timeline .demo-card--step5 { // brown for partners
   background-color: #935300;
 }
 #timeline .demo-card--step5 .head::after {
