--- a/pages/css/SEPtimeline.css
+++ b/pages/css/SEPtimeline.css
@@ -162,10 +162,9 @@ strong {
 }
 #timeline .demo-card--step1 { /* yellow - accessibility research */
   background-color: #f5c44b;
-  color: #000; /* added for better contrast */
 }
-#timeline .demo-card--step1 h2 { /* yellow - accessibility research */
-  color: #000; /* added for better contrast */
+#timeline .demo-card--step1 h2 { /* added for better contrast */
+  color: #000; 
 }
 #timeline .demo-card--step1 .head::after {
   border-color: #f5c44b;
@@ -173,8 +172,8 @@ strong {
 #timeline .demo-card--step2 { /* greenish blue - events */
   background-color: #3ee9d1;
 }
-#timeline .demo-card--step2 h2 { /* greenish blue - events */
-  color: #000; /* added for better contrast */
+#timeline .demo-card--step2 h2 { /* added for better contrast */
+  color: #000; 
 }
 #timeline .demo-card--step2 .head::after {
   border-color: #3ee9d1;
