--- a/webpages/css/SEPtimeline.css
+++ b/webpages/css/SEPtimeline.css
@@ -213,3 +213,20 @@ H3 {
     padding-bottom: 0.2em;
 
 }
+
+/* for the key */
+#timeline  .key {
+    border: 1px solid #000; 
+    padding: 10px; 
+    max-width: 30%
+}
+
+#timeline .key p {
+    margin: 4px 0;
+}
+
+#timeline .key span {
+    padding: 0 10px; 
+    margin: 2px 0;
+}
+
