--- a/webpages/css/SEPtimeline.css
+++ b/webpages/css/SEPtimeline.css
@@ -117,7 +117,7 @@ strong {
 }
 #timeline .demo-card .head h2 {
   text-transform: uppercase;
-  font-size: 1.3rem;
+  font-size: 200% ; /* was 1.3rem; this is for mobile */
   font-weight: inherit;
   letter-spacing: 2px;
   margin: 0;
@@ -126,13 +126,13 @@ strong {
 }
 @media (min-width: 480px) {
   #timeline .demo-card .head h2 {
-    font-size: 125%; /* was 165 and looked really big*/
+    font-size: 125%; /* was 165 and looked really big on bigger screen*/
     line-height: 1.2rem;
   }
 }
 #timeline .demo-card .head h2 span {
   display: block;
-  font-size: 0.6rem;
+  font-size: 125% ; /* was 0.6rem; this is for mobile */
   margin: 0;
 }
 @media (min-width: 480px) {
@@ -218,7 +218,19 @@ H3 {
 #timeline  .key {
     border: 1px solid #000; 
     padding: 10px; 
-    max-width: 30%
+    max-width: 94%   /*  this is for mobile - same as demo-card */
+}
+
+@media (min-width: 480px) {  /*  for tablets */
+  #timeline .key {
+    max-width: 50%;
+  }
+}
+
+@media (min-width: 720px) { /*  for big screens  */
+  #timeline .key {
+    max-width: 60%;
+  }
 }
 
 #timeline .key p {
