--- a/webpages/css/SEPtimeline.css
+++ b/webpages/css/SEPtimeline.css
@@ -218,18 +218,19 @@ H3 {
 #timeline  .key {
     border: 1px solid #000; 
     padding: 10px; 
-    max-width: 94%   /*  this is for mobile - same as demo-card */
+    max-width: 94%;   /*  this is for mobile - same as demo-card */
+    z-index: 2;
 }
 
 @media (min-width: 480px) {  /*  for tablets */
   #timeline .key {
-    max-width: 50%;
+    max-width: 60%;
   }
 }
 
 @media (min-width: 720px) { /*  for big screens  */
   #timeline .key {
-    max-width: 60%;
+    max-width: 40%;
   }
 }
 
