SK removing this as CSS is messed up

--- a/webpages/css/SEPtimeline.css
+++ b/webpages/css/SEPtimeline.css
@@ -243,8 +243,8 @@ H3 {
 }
 
 /* for consistency with the rest: */
-#timeline .demo-card .body a a:hover a:active {
+/* #timeline .demo-card .body a a:hover a:active {
     color: #0D5ec0;
     text-decoration: none;
     cursor: pointer;
-}
+} */
