--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.url }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.url }}/feed.xml" />
-
+    <link rel="stylesheet" href="https://scotentsd.github.io/resources/timeline.css?ver=14">
   </head>
 
   <body>
