--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
@@ -18,7 +18,7 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.url }}/" class="site-avatar"><img src="/images/saltire.png" style="margin-top:10px;" /></a>
+          <a href="{{ site.url }}/" class="site-avatar"><img src="/images/saltire.png" alt="saltire logo" style="margin-top:10px;" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">SEP</a></h1>
