--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,8 @@
 //
 
 // Colors
-$blue: #4183C4;
+$blue: #0D5ec0; /* was #4183C4; changed for better contrast, was flagged by WAVE plugin" */
+$redGDS: #d4351c; /* added in case we needed, good contrast against white, used for error message in GDS design system */
 
 // Grays
 $black: #000;
