--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
   <body>
     <div class="wrapper-masthead">
-      <div class="container">
+      <div class="container" id="container_wide">
         <header class="masthead clearfix">
           <a href="{{ site.url }}/" class="site-avatar"><img src="/images/saltire.png" alt="saltire logo" style="margin-top:10px;" /></a>
 
