--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,9 @@
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
+          <a href="http://bradfrost.com/blog/post/designing-in-the-open/">
+            <img alt="Design in the open logo" src="https://scotentsd.github.io/images/designintheopen.png" style="width:200px;">
+          </a>
         </footer>
       </div>
     </div>
