--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
       <div class="container" id="container_wide">
         <header class="masthead clearfix">
    
-          <a href="{{ site.url }}/" class="site-avatar"><img src="/images/saltire.png" alt="saltire logo" style="margin-top:10px;" /></a>
+          <a href="{{ site.url }}/" class="site-avatar"><img src="/images/SaltireCross.png" alt="saltire logo" style="margin-top:10px;" /></a>
           <div class="site-info">
             <!-- <h1 class="site-name"><a href="{{ site.baseurl }}/">SEP</a></h1> -->
             <p class="site-description">{{ site.description }}</p>
