--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,7 @@
     <div class="wrapper-masthead">
       <div class="container" id="container_wide">
         <header class="masthead clearfix">
-   
-          
-          <a href="{{ site.url }}/" class="site-avatar"><img src="/images/SaltireCross.png" alt="saltire logo" style="margin-top:10px;" /></a>
-   
-          
+
           <div class="site-info">
             <!-- <h1 class="site-name"><a href="{{ site.baseurl }}/">SEP</a></h1> -->
             <p class="site-description">{{ site.description }}</p>
@@ -45,11 +41,16 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          <a href="http://bradfrost.com/blog/post/designing-in-the-open/">
+          <a href="http://scotentsd.github.io">
             <img alt="Design in the open logo" src="https://scotentsd.github.io/images/designintheopen.png" style="width:200px;">
           </a>
           <br />
           {% include svg-icons.html %}
+             
+          
+          <a href="{{ site.url }}/" class="site-avatar"><img src="/images/SaltireCross.png" alt="saltire logo" style="margin-top:10px;" /></a>
+   
+          
         </footer>
       </div>
     </div>
