--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -4,6 +4,7 @@
 MeyerWeb Reset
 *******************************************************************************/
 
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -146,6 +147,18 @@ img {
   -ms-box-shadow: 0 0 5px #ebebeb;
 }
 
+.imgFooter {
+  position: relative;
+  margin: 0 auto;
+  max-width: 739px;
+  padding: 5px;
+  margin: 10px 0 10px 0;
+  border: 0px;
+
+  border-style: none;
+  box-shadow: none;
+}
+
 p img {
   display: inline;
   margin: 0;
@@ -263,7 +276,7 @@ Full-Width Styles
 .inner {
   position: relative;
   max-width: 840px;
-  padding: 20px 10px;
+  padding: 10px 10px;
   margin: 0 auto;
 }
 
@@ -284,15 +297,15 @@ Full-Width Styles
 
 #header_wrap {
   background: #00427f;
-  background: -moz-linear-gradient(top, #2980b9, #00427f);
-  background: -webkit-linear-gradient(top, #2980b9, #00427f);
-  background: -ms-linear-gradient(top, #2980b9, #00427f);
-  background: -o-linear-gradient(top, #2980b9, #00427f);
-  background: linear-gradient(to top, #2980b9, #00427f);
+  background: -moz-linear-gradient(135deg, #2980b9, #00427f);
+  background: -webkit-linear-gradient(135deg, #2980b9, #00427f);
+  background: -ms-linear-gradient(135deg, #2980b9, #00427f);
+  background: -o-linear-gradient(135deg, #2980b9, #00427f);
+  background: linear-gradient(135deg, #2980b9, #00427f);
 }
 
 #header_wrap .inner {
-  padding: 50px 10px 30px 10px;
+  padding: 10px 10px 10px 10px;
 }
 
 #project_title {
@@ -361,7 +374,13 @@ Full-Width Styles
 }
 
 #footer_wrap {
-  background: #2f3e44;
+  background: #00427f;
+  background: -moz-linear-gradient(135deg, #2980b9, #00427f);
+  background: -webkit-linear-gradient(135deg, #2980b9, #00427f);
+  background: -ms-linear-gradient(135deg, #2980b9, #00427f);
+  background: -o-linear-gradient(135deg, #2980b9, #00427f);
+  background: linear-gradient(135deg, #2980b9, #00427f);
+
 }
 
 
