--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,10 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+          <a href="{{site.url}}/{{site.github.repository_name }}">
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+          <!-- <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2> -->
+          </a>
         </header>
     </div>
 
@@ -26,19 +28,21 @@
         {{ content }}
       </section>
     </div>
+    
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
+        <a href="http://scotentsd.github.io">
+            <img class="imgFooter" alt="Design in the open logo" src="https://scotentsd.github.io/images/designintheopen.png" style="width:200px; border:none;">
+        </a>
+        
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      
-        <a href="http://scotentsd.github.io">
-            <img class="imgFooter" alt="Design in the open logo" src="https://scotentsd.github.io/images/designintheopen.png" style="width:200px; border:none;">
-          </a>
-          <br />
+
+        <br />
       </footer>
     </div>
 
