--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,6 +23,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+        <h2 id="post_title">{{ post.title }}</h2>
         {{ content }}
       </section>
     </div>
