--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" }}">
+<html lang="en">
 
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,maximum-scale=2">
+    {% include meta.html %}                                                                      
     <title>{% if post.title  %}{{post.title}} | {% endif %}{{ site.title }}</title>
     <link rel="stylesheet" type="text/css" media="screen" href="https://scotentsd.github.io/assets/css/style.css">   
+    <link rel="icon" href="https://scotentsd.github.io/images/favicon.ico">
   </head>
 
   <body>
@@ -17,12 +16,7 @@
             <h1 id="project_title">Single Entry Point</h1>
           </a>
           <!--h2 id="project_tagline"></h2-->
-          <nav>
-            <a href="https://scotentsd.github.io/">Home</a>
-            <a href="https://scotentsd.github.io/about">About</a>
-            <a href="https://scotentsd.github.io/blog">Blog</a>
-            <a href="https://scotentsd.github.io/help">Help</a>
-          </nav>
+          {% include nav.html %}
         </header>
     </div>
     <!-- MAIN CONTENT -->
@@ -48,6 +42,6 @@
         <br />
       </footer>
     </div>
-
+    {% include analytics.html %}
   </body>
 </html>
