--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner clearfix">
           <a href="{{site.url}}/{{site.github.repository_name }}">
-            <h1 id="project_title">International Networks</h1>
+            <h1 id="project_title">Single Entry Point</h1>
           </a>
           <!-- <h2 id="project_tagline"></h2> -->
           {% include nav.html %}
@@ -23,7 +23,10 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1 id="post_title">{{page.title }}</h1>
+        {% if page.return_url %}
+        <p><a href={{page.return_url}}>Return to timeline page</a></p>
+        {% endif %}
+        <h1 id="post_title">{{page.title }}{% if page.type_of_event %} - {{page.type_of_event}}{% endif %}</h1>
         {{ content }}
       </section>
     </div>
