SK - improve back link

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         {% if page.return_url %}
-        <p><a href={{page.return_url}}>Return to timeline page</a></p>
+        <p><a href={{page.return_url}}>&lt; Back to Timeline</a></p>
         {% endif %}
         <h1 id="post_title">{{page.title }}{% if page.type_of_event %} - {{page.type_of_event}}{% endif %}</h1>
         {{ content }}
