--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner clearfix">
           <a href="{{site.url}}/{{site.github.repository_name }}">
-            <h1 id="project_title">Single Entry Point</h1>
+              <h1 id="project_title">{{site.title}}</h1>
           </a>
           <!--h2 id="project_tagline"></h2-->
           {% include nav.html %}
