--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <head>
     {% include meta.html %}                                                                      
     <title>{% if post.title  %}{{post.title}} | {% endif %}{{ site.title }}</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="https://scotentsd.github.io/assets/css/style.css">   
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ 'https://scotentsd.github.io/assets/css/style.css?v=' | append: site.github.build_revision}}">   
     <link rel="icon" href="https://scotentsd.github.io/images/favicon.ico">
   </head>
 
