--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,9 +1,9 @@
 <div class="breadcrumbs">
 <a href="https://scotentsd.github.io/">Home</a>
-{% if notitle %}
-  <span>  &gt;  </span>Single Entry Point
-{% else %}
+{% if page.title %}
   <span>  &gt;  </span><a href="{{site.url}}/{{site.github.repository_name }}">SEP</a>
   <span>  &gt;  </span> {{ page.title }}
+{% else %}
+  <span>  &gt;  </span>SEP
 {% endif %}
 </div>
