--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -2,8 +2,8 @@
 <a href="https://scotentsd.github.io/">Home</a>
 {% if page.title %}
   <span>  &gt;  </span><a href="{{site.url}}/{{site.github.repository_name }}">SEP</a>
-  {% if post.return_url %}
-    <span>  &gt;  </span><a href="{{post.return_url}}">Timeline</a>
+  {% if page.return_url %}
+    <span>  &gt;  </span><a href="{{page.return_url}}">Timeline</a>
   {% endif %}
   <span>  &gt;  </span> {{ page.title }}
 {% else %}
