SK add a tagline to add sep as old name

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
           <a href="{{site.url}}/{{site.github.repository_name }}">
               <h1 id="project_title">{{site.title}}</h1>
           </a>
-          <!--h2 id="project_tagline"></h2-->
+          <h2 id="project_tagline">was Single Entrry Point</h2>
           {% include nav.html %}
         </header>
     </div>
