--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@
  
   <head>
     {% include meta.html %}
-    <title>{% if page.tltitle  %}{{ page.tltitle }} – {% endif %}{{ site.tltitle }}</title>
+    <title>{% if page.tltitle  %}{{ page.tltitle }}{% endif %}- {{site.title}}</title>
     <link rel="stylesheet" type="text/css" media="screen" href="https://scotentsd.github.io/assets/css/style.css">
     <link rel="icon" href="https://scotentsd.github.io/images/favicon.ico">
   </head>
@@ -15,7 +15,7 @@
           <a href="{{site.url}}/{{site.github.repository_name }}">
             <h1 id="project_title">{{site.title}}</h1>
           </a>
-          <!-- <h2 id="project_tagline"></h2> -->
+          <h2 id="project_tagline">{{ site.description }}</h2>
           {% include nav.html %}
         </header>
     </div>
@@ -24,7 +24,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         {% include breadcrumbs.html %}
-        <h1 id="post_title">{{page.tltitle }}{% if page.type_of_event %} - {{page.type_of_event}}{% endif %}</h1>
+        <h1 id="post_title">{% if page.tltitle  %}{{ page.tltitle }}{% endif %}{% if page.type_of_event %} :: {{page.type_of_event}}{% endif %}</h1>
         {{ content }}
       </section>
     </div>
@@ -36,12 +36,14 @@
             <img class="imgFooter" alt="Design in the open logo" src="https://scotentsd.github.io/images/designintheopen-white.png" style="width:200px; border:none;">
         </a>
         {% if site.github.is_project_page %}
-        <p class="copyright">{{ site.tltitle | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p><a href="http://prose.io/#scotentSD/opportunity/edit/master/{{page.path}}" target="_blank">Edit this page in PROSE.IO</a></p>
         <br />
       </footer>
     </div>
     {% include analytics.html %}
+
   </body>
 </html>
